Issue #16 - Style the Leaflet Map for Responsiveness | Art View #16
Map page is now responsive as all get out. On screens larger than 2000px I increased all fonts and map size to fit the screen better. Responsive with no overlap in the illnesses when lowering screen size.

--- a/app/assets/stylesheets/contexts/installations.scss
+++ b/app/assets/stylesheets/contexts/installations.scss
@@ -1,5 +1,5 @@
 .installations {
-  .active, .activated, .submissions {
+  .active, .activated, .installation-info {
     color: $text-color;
   }
 }
